# CMEP

./: CMakeLists.txt
EngineCore/: CMakeLists.txt
EngineCore/include/: Engine.hpp  Object.hpp  Scene.hpp  SceneLoader.hpp  SceneManager.hpp
EngineCore/include/Logging/: Logging.hpp
EngineCore/include/Rendering/: IRenderer.hpp  SpriteRenderer.hpp  TextRenderer.hpp
EngineCore/src/: Engine.cpp  Scene.cpp  SceneLoader.cpp  SceneManager.cpp
EngineCore/src/Rendering/: MeshRenderer.cpp  SpriteRenderer.cpp  TextRenderer.cpp
EngineCore/src/Scripting/: Mappings.cpp
common_include/: EngineCore.hpp
examples/: CMakeLists.txt
examples/floppybirb/: config.json
examples/floppybirb/scenes/floppygame/: scene.json
examples/floppybirb/scenes/floppygame/scripts/: eventHandlers.lua
examples/floppybirb/shaders/vulkan/: textrenderer.vert
rungame/: CMakeLists.txt
rungame/src/: main.cpp
